# homeworld

./: .gitignore  README  README.markdown  SConstruct  c2bc.py
HomeworldSDL_big/: convert_directory_to_big_file
Linux/stuff/: configure.ac
android/: README.markdown  SConscript
android/jni/: Android.mk
emsc/: SConscript  homeworld.html
js/: SConscript
llvm/: CMakeCache.txt  SConscript  SConstruct  c2bc.py  emscripten
llvm/src/: SConscript
nacl/: SConscript
npapi/: SConscript  api.cpp
npapi/Home/: CMakeLists.txt  Factory.cpp  Home.cpp  Home.h  HomeAPI.cpp  HomeAPI.h  PluginConfig.cmake
npapi/Home/Mac/: projectDef.cmake
npapi/Home/Win/: projectDef.cmake
npapi/Home/Win/WiX/: HomeInstaller.wxs
npapi/Home/X11/: projectDef.cmake
npapi/src/: SConscript  instance.cpp  instance.h  module.cpp  module.h  module_embedder.cpp  npapi-sdk  pp.cpp  ppapi  ppp.cpp  ppp.h
npapi/src/GLES2/: webgl.cpp
npapi/src/interface/: webgl.cpp
npapi/src/pepperemul/include/: npapicpp.h
src/: CMakeLists.txt  SConscript  SConstruct  workfile.rb
src/GL/: SConstruct  glinclude.h
src/GLES/: GLPart.cpp  GLPart.h  SConstruct  bbtree.h  data.h  gles.h  glinclude.h  include.h  iuniform.h  iuniformvalue.h  render.h  render_component.h  uniform.h
src/GLES/emul/: color.c  color.h  defines.h  error.c  error.h  normal.c  normal.h  state.c  state.h  texture.c  texture.h  vertex.c  vertex.h
src/GLES1/: SConstruct  gles1.h  glinclude.h
src/GLES1/emul/: array.h  color.cpp  color.h  declarations.h  include.h  mutex.cpp  mutex.h  normal.c  normal.cpp  normal.h  render.cpp  render.h  state.cpp  state.h  texture.cpp  texture.h  vertex.cpp  vertex.h
src/GLES2/: SConscript  SConstruct  gles2.cpp  gles2.h  glinclude.h
src/GLES2/emul/: GLPart.cpp  GLPart.h  alpha.cpp  alpha.h  clip.cpp  clip.h  color.cpp  color.h  declaration.h  declarations.h  defines.h  fog.cpp  fog.h  fragment.shader  include.h  irenderstate.h  iuniform.h  iuniformvalue.h  light.cpp  light.h  line.cpp  line.h  material.cpp  material.h  matrices.c  matrices.cpp  matrices.h  normal.c  normal.cpp  normal.h  point.c  point.cpp  point.h  raster.cpp  raster.h  render.cpp  render.h  state.c  state.cpp  state.h  (+10 more)
src/Game/: AIAttackMan.cpp  AIDefenseMan.cpp  AIEvents.c  AIEvents.cpp  AIEvents.h  AIFleetMan.cpp  AIHandler.cpp  AIMoves.cpp  AIOrders.c  AIOrders.cpp  AIPlayer.c  AIPlayer.cpp  AIPlayer.h  AIResourceMan.cpp  AIShip.c  AIShip.cpp  AITeam.c  AITeam.h  AIUtilities.c  AIVar.c  AIVar.h  Animatic.c  Attack.cpp  Attack.h  BTG.c  BTG.h  Battle.c  Battle.h  BigFile.c  BigFile.h  CMakeLists.txt  Captaincy.c  Captaincy.h  ChannelFSM.c  Clouds.c  ColPick.c  Collision.c  Collision.cpp  Collision.h  CommandLayer.c  (+146 more)
src/Missions/: CMakeLists.txt  SConscript  SConstruct
src/Missions/SinglePlayer/: Mission01.kas  Mission02.kas  Mission03.kas  Mission04.kas  Mission05.kas  Mission05_OEM.kas  Mission06.kas  Mission07.kas  Mission08.kas  Mission09.kas  Mission10.kas  Mission11.kas  Mission12.kas  Mission13.kas  Mission14.kas  Mission15.kas  Mission16.kas  SConscript  SConstruct
src/Missions/Tutorials/: SConscript  SConstruct
src/SDL/: CMakeLists.txt  ClientCDKey.cpp  Queue.c  SConscript  SConstruct  Titan.cpp  Titan.h  TitanInterfaceC.h  TitanPacketMsg.cpp  avi.c  avi.h  font.c  font.h  glinc.h  main.c  main.h  mainrgn.c  mainrgn.h  mouse.c  prim2d.c  prim2d.h  prim3d.c  render.c  render.h  rglu.c  screenshot.c  smixer.c  soundlow.c  sstream.c  texreg.c  texreg.h  utility.c  utility.h
src/Ships/: CMakeLists.txt  DefenseFighter.c  GenericInterceptor.c  GravWellGenerator.c  RepairCorvette.c  SConscript  SConstruct
src/llvm/: SConstruct  homeworld.cpp
src/mosync/: SDL_mutex.c  config.h  gl2_extras.h  glGetString.c  interfce.c  mosync_gl1.c  mosync_gl1.h  mosync_preinit.c  supc++.c  wrapper-opengles.c
tools/: CMakeLists.txt  SConscript  SConstruct
tools/biggie/: main.c  workfile.rb
tools/kas2c/: CMakeLists.txt  SConscript  SConstruct  kas2c.c  kas2c.h  lexer.l  parser.y  workfile.rb
