include_directories(Game) 
include_directories(ThirdParty/JPG)
include_directories(ThirdParty/CRC)
include_directories(ThirdParty/LZSS)
include_directories(ThirdParty/Titan)
include_directories(SDL) 
include_directories(Ships)
#include_directories(Missions/Generated)

#add_subdirectory(Missions)
add_subdirectory(Game)
add_subdirectory(ThirdParty)
add_subdirectory(SDL)
add_subdirectory(Ships)
