add_library(
game
./AutoLOD.c
./File.c
./MultiplayerGame.c
./LinkedList.c
./Collision.c
./BigFile.c
./InfoOverlay.c
./NavLights.c
./Clouds.c
./Star3d.c
./StubTransform.c
./NetCheck.c
./CameraCommand.c
./LaunchMgr.c
./Nebulae.c
./FlightMan.c
./AIAttackMan.c
./SoundEvent.c
./CommandLayer.c
./Subtitle.c
./AIVar.c

./LOD.c
./Chatting.c
./Attack.c
./ScenPick.c
./AIEvents.c
./BTG.c
./AIDefenseMan.c
./KNITransform.c
./Hash.c
./Mesh.c
./Debug.c
./Ping.c
./Undo.c
./Alliance.c
./HS.c
./Globals.c
./Sensors.c
./MadLinkIn.c
./AIMoves.c

./Damage.c
./AIResourceMan.c
./AIPlayer.c
./Transformer.c
./Matrix-mult.c
./BMP.c
./AITrack.c
./MEX.c
./CommandWrap.c
./UIControls.c
./Select.c
./SpeechEvent.c
./Clipper.c
./Battle.c
./Color.c
./TitanNet.c
./FontReg.c
./GamePick.c
./Clamp.c
./AIFleetMan.c
./Memory.c
./Vector.c
./Captaincy.c
./Randy.c
./PlugScreen.c
./Tweak.c
./Blobs.c
./Demo.c
./ProfileTimers.c
./Animatic.c
./CommandNetwork.c
./AITeam.c
./ResearchGUI.c
./Tracking.c
./FEFlow.c
./NIS.c
./Objectives.c
./ShipSelect.c
./Tactical.c
./KeyBindings.c
./ObjTypes.c
./GameChat.c
./AutoDownloadMap.c
./Region.c
./ShipView.c
./ResCollect.c
./KASFunc.c
./StatScript.c
./Types.c
./AIUtilities.c
./SaveGame.c
./Universe.c
./UnivUpdate.c
./Timer.c
./Volume.c
./Particle.c
./Crates.c
./AIOrders.c
./AIHandler.c
./ResearchAPI.c
./MultiplayerLANGame.c
./SoundEventStop.c
./Physics.c
./Stats.c
./FEReg.c
./TradeMgr.c
./Twiddle.c
./ChannelFSM.c
./Formation.c
./Eval.c
./HorseRace.c
./Options.c
./TaskBar.c
./Light.c
./Tactics.c
./Teams.c
./AIShip.c
./Camera.c
./Trails.c
./Dock.c
./MeshAnim.c
./ConsMgr.c
./Gun.c
./KAS.c
./Matrix.c
./LagPrint.c
./Task.c
./B-Spline.c
./StringSupport.c
./Shader.c
./Key.c
./Bounties.c
./SoundEventPlay.c
./ETG.c
./PiePlate.c
./LevelLoad.c
./ColPick.c
./Scroller.c
./SinglePlayer.c
./Tutor.c
)
