include_directories(.)

add_library(SDL 
./screenshot.c
./render.c
./prim3d.c
./fqcodec.c
#./debugwnd.c
./soundlow.c
./main.c
./smixer.c
./sstream.c
./utility.c
./Queue.c
./avi.c
./gldll.c
./rglu.c
./TitanInterfaceC.stub.c
./TimeoutTimer.c
./font.c
./TitanInterfaceC.c
./glcaps.c
./mixfft.c
./fquant.c
./fqeffect.c
./mouse.c
./mainrgn.c
./NetworkInterface.c
#./wave.c
./rinit.c
./dct.c
./Titan.c
./prim2d.c
./texreg.c
)
