add_library (Ships 
./P2AdvanceSwarmer.c
./FloatingCity.c
./MinelayerCorvette.c
./GravWellGenerator.c
./LightCorvette.c
./StandardDestroyer.c
./P2Mothership.c
./HeavyCorvette.c
./DDDFrigate.c
./P2FuelPod.c
./SalCapCorvette.c
./DefaultShip.c
./Carrier.c
./ResearchShip.c
./DFGFrigate.c
./P2Swarmer.c
./IonCannonFrigate.c
./Mothership.c
./ProximitySensor.c
./Probe.c
./ResourceCollector.c
./P1IonArrayFrigate.c
./CloakGenerator.c
./P1MissileCorvette.c
./ResourceController.c
./P3StandardShip.c
./P1Mothership.c
./P2MultiBeamFrigate.c
./SensorArray.c
./AdvanceSupportFrigate.c
./MissileDestroyer.c
./GenericDefender.c
./Drone.c
./P1StandardCorvette.c
./StandardFrigate.c
./HeavyCruiser.c
./RepairCorvette.c
./DefenseFighter.c
./GenericInterceptor.c
./MultiGunCorvette.c
)
